--- a/archives.html
+++ b/archives.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Archives Internes</title>
+    <title>Archives Internes – Hikari no Mori</title>
 </head>
-<body style="font-family: Arial; background-color:black; color:white; padding:40px;">
 
-<h1>Base de Données Interne – Hikari no Mori</h1>
+<body style="font-family: Arial; background-color:black; color:white; padding:50px;">
+
+<h1>Base de Données Interne</h1>
+
+<hr>
+
+<h2>Dossiers disponibles :</h2>
 
 <ul>
-<li>Dossier 07 – Transfert administratif (2004)</li>
-<li>Sujet H-12</li>
-<li>Incident interne – Salle B</li>
-<li>Enregistrement Sécurité – 12/03/2006</li>
+<li>
+<a href="jumeaux.html" style="color:lightblue;">
+Dossier 12 – Expérience : Jumeaux
+</a>
+</li>
+
+<li>
+<a href="boitemail.html" style="color:lightblue;">
+Messagerie interne – Nouveau message (1)
+</a>
+</li>
 </ul>
-
-<p>Vidéo interne :</p>
-
-<iframe width="560" height="315"
-src="https://www.youtube.com/embed/VIDEO_ID"
-frameborder="0" allowfullscreen>
-</iframe>
 
 </body>
 </html>
