--- a/index.html
+++ b/index.html
@@ -2,21 +2,69 @@
 <html>
 <head>
     <title>Ville de Kumamoto – Portail Municipal</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body style="font-family: Arial; background-color:#f4f4f4; padding:40px;">
+<body>
 
-<h1>Ville de Kumamoto – Portail Municipal Officiel</h1>
+<header>
+    <h1>Ville de Kumamoto</h1>
+</header>
 
-<p>Située dans la préfecture de Kumamoto, sur l’île de Kyushu, la ville est reconnue pour son patrimoine historique et culturel.</p>
+<nav>
+    <a href="#">Tourisme</a>
+    <a href="#">Culture</a>
+    <a href="#">Éducation</a>
+    <a href="orphelinat.html">Orphelinat Hikari no Mori</a>
+</nav>
 
-<h2>Services & Institutions</h2>
-<ul>
-<li>Tourisme</li>
-<li>Transports</li>
-<li>Culture</li>
-<li>Éducation</li>
-<li><a href="orphelinat.html">Orphelinat Hikari no Mori (光の森孤児院)</a></li>
-</ul>
+<section class="section">
+    <h2>Bienvenue à Kumamoto</h2>
+    <p>
+        Située sur l’île de Kyushu, Kumamoto est reconnue pour son patrimoine
+        historique, son château emblématique et ses festivals saisonniers.
+        La ville mêle tradition japonaise et modernité urbaine.
+    </p>
+</section>
+
+<section class="section">
+    <h2>Découvrir la ville</h2>
+
+    <div class="cards">
+
+        <div class="card">
+            <img src="images/parc.jpg">
+            <div class="card-content">
+                <h3>Parc Suizenji</h3>
+                <p>Un jardin traditionnel offrant une vue paisible et des
+                paysages miniatures inspirés du Mont Fuji.</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="images/streetfood.jpg">
+            <div class="card-content">
+                <h3>Marché de Street Food</h3>
+                <p>Découvrez les stands locaux proposant ramen, yakitori
+                et spécialités régionales.</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="images/orphanage.jpg">
+            <div class="card-content">
+                <h3>Orphelinat Hikari no Mori</h3>
+                <p>Établissement éducatif reconnu pour son excellence
+                et son environnement naturel préservé.</p>
+                <a href="orphelinat.html" class="button">En savoir plus</a>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+<footer>
+    © Ville de Kumamoto – Portail officiel
+</footer>
 
 </body>
 </html>
