--- a/orphelinat.html
+++ b/orphelinat.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Orphelinat Hikari no Mori</title>
+
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body style="font-family: Arial; background-color:white; padding:40px;">
 
