--- a/orphelinat.html
+++ b/orphelinat.html
@@ -2,29 +2,72 @@
 <html>
 <head>
     <title>Orphelinat Hikari no Mori</title>
-
     <link rel="stylesheet" href="style.css">
-    
 </head>
-<body style="font-family: Arial; background-color:white; padding:40px;">
+<body>
 
-<h1>Orphelinat Hikari no Mori</h1>
+<header class="orphan-header">
+    <h1>Orphelinat Hikari no Mori</h1>
+</header>
 
-<p>Fondé en 1987</p>
-<p>Adresse : 2-14-6 Kurokami, Chuo Ward, Kumamoto</p>
+<nav>
+    <a href="index.html">Accueil</a>
+    <a href="#">Présentation</a>
+    <a href="#">Admissions</a>
+    <a href="connexion.html">Portail interne</a>
+</nav>
 
-<p>Un établissement reconnu pour son excellence éducative et son environnement bienveillant.</p>
+<section class="section orphan-section">
+    <h2>Un lieu de lumière et d’espoir</h2>
+    <p>
+        Fondé en 1987, l’Orphelinat Hikari no Mori offre un environnement
+        bienveillant et structuré. Situé au cœur d’un espace naturel protégé,
+        l’établissement privilégie l’éducation, l’équilibre émotionnel et
+        l’épanouissement personnel.
+    </p>
+</section>
 
-<h2>Galerie</h2>
-<p>Enfants souriants dans un jardin lumineux.</p>
-<p>Bâtiment moderne baigné de lumière naturelle.</p>
-<p>Salles de classe impeccables.</p>
+<section class="section">
+    <h2>Notre environnement</h2>
 
-<br><br>
+    <div class="cards">
 
-<a href="connexion.html">
-<button style="padding:10px 20px;">Accéder au portail interne</button>
-</a>
+        <div class="card">
+            <img src="images/orphanage.jpg">
+            <div class="card-content">
+                <h3>Bâtiment principal</h3>
+                <p>Architecture moderne baignée de lumière naturelle.</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="images/parc.jpg">
+            <div class="card-content">
+                <h3>Jardins éducatifs</h3>
+                <p>Espaces verts favorisant le calme et la concentration.</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="images/streetfood.jpg">
+            <div class="card-content">
+                <h3>Vie communautaire</h3>
+                <p>Activités collectives et ateliers pédagogiques.</p>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+<section class="section orphan-cta">
+    <h2>Accès Administratif</h2>
+    <p>Réservé au personnel autorisé.</p>
+    <a href="connexion.html" class="button">Accéder au portail sécurisé</a>
+</section>
+
+<footer>
+    © Orphelinat Hikari no Mori – Institution reconnue
+</footer>
 
 </body>
 </html>
