--- a/orphelinat.html
+++ b/orphelinat.html
@@ -7,7 +7,7 @@
 <body>
 
 <header class="orphan-header">
-    <h1>Orphelinat Hikari no Mori</h1>
+    <h1>Hikari no Mori</h1>
 </header>
 
 <nav>
@@ -17,52 +17,52 @@
     <a href="connexion.html">Portail interne</a>
 </nav>
 
-<section class="section orphan-section">
-    <h2>Un lieu de lumière et d’espoir</h2>
+<section class="section orphan-intro">
+    <h2>Présentation</h2>
     <p>
-        Fondé en 1987, l’Orphelinat Hikari no Mori offre un environnement
-        bienveillant et structuré. Situé au cœur d’un espace naturel protégé,
-        l’établissement privilégie l’éducation, l’équilibre émotionnel et
-        l’épanouissement personnel.
+        Fondé en 1987, l'Orphelinat Hikari no Mori est un établissement
+        spécialisé dans l'accompagnement éducatif et social des mineurs.
+        Situé à Kumamoto, l'établissement offre un environnement sécurisé,
+        structuré et bienveillant.
     </p>
 </section>
 
-<section class="section">
-    <h2>Notre environnement</h2>
+<section class="section orphan-stats">
+    <h2>Capacité & Encadrement</h2>
+    <ul>
+        <li>Capacité maximale : 42 enfants</li>
+        <li>Personnel éducatif : 18 encadrants certifiés</li>
+        <li>Psychologues : 2</li>
+        <li>Internat sécurisé 24h/24</li>
+    </ul>
+</section>
 
-    <div class="cards">
+<section class="section orphan-pricing">
+    <h2>Tarification & Subventions</h2>
+    <p>
+        L'établissement est partiellement subventionné par la municipalité
+        de Kumamoto. Les frais d'accueil sont adaptés selon la situation
+        administrative et sociale des mineurs.
+    </p>
+    <p>
+        Contribution moyenne : 38 000 ¥ / mois (variable selon dossier).
+    </p>
+</section>
 
-        <div class="card">
-            <img src="images/orphanage.jpg">
-            <div class="card-content">
-                <h3>Bâtiment principal</h3>
-                <p>Architecture moderne baignée de lumière naturelle.</p>
-            </div>
-        </div>
+<section class="section orphan-gallery">
+    <h2>Vie quotidienne</h2>
 
-        <div class="card">
-            <img src="images/parc.jpg">
-            <div class="card-content">
-                <h3>Jardins éducatifs</h3>
-                <p>Espaces verts favorisant le calme et la concentration.</p>
-            </div>
-        </div>
-
-        <div class="card">
-            <img src="images/streetfood.jpg">
-            <div class="card-content">
-                <h3>Vie communautaire</h3>
-                <p>Activités collectives et ateliers pédagogiques.</p>
-            </div>
-        </div>
-
+    <div class="gallery">
+        <img src="images/enfant1.jpg">
+        <img src="images/enfant2.jpg">
+        <img src="images/enfant3.jpg">
     </div>
 </section>
 
 <section class="section orphan-cta">
-    <h2>Accès Administratif</h2>
-    <p>Réservé au personnel autorisé.</p>
-    <a href="connexion.html" class="button">Accéder au portail sécurisé</a>
+    <a href="connexion.html" class="button">
+        Accès au portail administratif
+    </a>
 </section>
 
 <footer>
