--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ville de Kumamoto – Portail Municipal</title>
+    <title>Ville de Kumamoto</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
 </header>
 
 <nav>
-    <a href="#">Tourisme</a>
+    <a href="index.html" class="active">Accueil</a>
     <a href="#">Culture</a>
     <a href="#">Éducation</a>
     <a href="orphelinat.html">Orphelinat Hikari no Mori</a>
@@ -20,9 +20,8 @@
 <section class="section">
     <h2>Bienvenue à Kumamoto</h2>
     <p>
-        Située sur l’île de Kyushu, Kumamoto est reconnue pour son patrimoine
-        historique, son château emblématique et ses festivals saisonniers.
-        La ville mêle tradition japonaise et modernité urbaine.
+        Située sur l’île de Kyushu, Kumamoto est reconnue pour son patrimoine historique,
+        son château emblématique et ses festivals saisonniers.
     </p>
 </section>
 
@@ -30,13 +29,11 @@
     <h2>Découvrir la ville</h2>
 
     <div class="cards">
-
         <div class="card">
             <img src="images/parc.jpg">
             <div class="card-content">
                 <h3>Parc Suizenji</h3>
-                <p>Un jardin traditionnel offrant une vue paisible et des
-                paysages miniatures inspirés du Mont Fuji.</p>
+                <p>Un jardin traditionnel offrant une vue paisible.</p>
             </div>
         </div>
 
@@ -44,8 +41,7 @@
             <img src="images/streetfood.jpg">
             <div class="card-content">
                 <h3>Marché de Street Food</h3>
-                <p>Découvrez les stands locaux proposant ramen, yakitori
-                et spécialités régionales.</p>
+                <p>Découvrez les spécialités locales.</p>
             </div>
         </div>
 
@@ -53,12 +49,10 @@
             <img src="images/orphanage.jpg">
             <div class="card-content">
                 <h3>Orphelinat Hikari no Mori</h3>
-                <p>Établissement éducatif reconnu pour son excellence
-                et son environnement naturel préservé.</p>
+                <p>Institution éducative reconnue.</p>
                 <a href="orphelinat.html" class="button">En savoir plus</a>
             </div>
         </div>
-
     </div>
 </section>
 
