--- a/orphelinat.html
+++ b/orphelinat.html
@@ -12,18 +12,15 @@
 
 <nav>
     <a href="index.html">Accueil</a>
-    <a href="#">Présentation</a>
-    <a href="#">Admissions</a>
-    <a href="connexion.html">Portail interne</a>
+    <a href="#">Culture</a>
+    <a href="#">Éducation</a>
+    <a href="orphelinat.html" class="active">Orphelinat Hikari no Mori</a>
 </nav>
 
 <section class="section orphan-intro">
     <h2>Présentation</h2>
     <p>
-        Fondé en 1987, l'Orphelinat Hikari no Mori est un établissement
-        spécialisé dans l'accompagnement éducatif et social des mineurs.
-        Situé à Kumamoto, l'établissement offre un environnement sécurisé,
-        structuré et bienveillant.
+        Fondé en 1987, l’établissement accueille des mineurs dans un cadre sécurisé.
     </p>
 </section>
 
@@ -31,25 +28,18 @@
     <h2>Capacité & Encadrement</h2>
     <ul>
         <li>Capacité maximale : 42 enfants</li>
-        <li>Personnel éducatif : 18 encadrants certifiés</li>
+        <li>Personnel éducatif : 18 encadrants</li>
         <li>Psychologues : 2</li>
         <li>Internat sécurisé 24h/24</li>
     </ul>
 </section>
 
 <section class="section orphan-pricing">
-    <h2>Tarification & Subventions</h2>
-    <p>
-        L'établissement est partiellement subventionné par la municipalité
-        de Kumamoto. Les frais d'accueil sont adaptés selon la situation
-        administrative et sociale des mineurs.
-    </p>
-    <p>
-        Contribution moyenne : 38 000 ¥ / mois (variable selon dossier).
-    </p>
+    <h2>Tarification</h2>
+    <p>Contribution moyenne : 38 000 ¥ / mois.</p>
 </section>
 
-<section class="section orphan-gallery">
+<section class="section">
     <h2>Vie quotidienne</h2>
 
     <div class="gallery">
@@ -59,14 +49,8 @@
     </div>
 </section>
 
-<section class="section orphan-cta">
-    <a href="connexion.html" class="button">
-        Accès au portail administratif
-    </a>
-</section>
-
 <footer>
-    © Orphelinat Hikari no Mori – Institution reconnue
+    © Orphelinat Hikari no Mori
 </footer>
 
 </body>
