--- a/orphelinat.html
+++ b/orphelinat.html
@@ -20,7 +20,10 @@
 <section class="section orphan-intro">
     <h2>Présentation</h2>
     <p>
-        Fondé en 1987, l’établissement accueille des mineurs dans un cadre sécurisé.
+        Fondé en 1987, l’Orphelinat Hikari no Mori est un établissement
+        spécialisé dans l’accompagnement éducatif et social des mineurs.
+        Situé à Kumamoto, l’établissement offre un environnement sécurisé,
+        structuré et bienveillant.
     </p>
 </section>
 
@@ -28,29 +31,42 @@
     <h2>Capacité & Encadrement</h2>
     <ul>
         <li>Capacité maximale : 42 enfants</li>
-        <li>Personnel éducatif : 18 encadrants</li>
+        <li>Personnel éducatif : 18 encadrants certifiés</li>
         <li>Psychologues : 2</li>
         <li>Internat sécurisé 24h/24</li>
     </ul>
 </section>
 
 <section class="section orphan-pricing">
-    <h2>Tarification</h2>
-    <p>Contribution moyenne : 38 000 ¥ / mois.</p>
+    <h2>Tarification & Subventions</h2>
+    <p>
+        L’établissement est partiellement subventionné par la municipalité
+        de Kumamoto. Les frais d’accueil sont adaptés selon la situation
+        administrative et sociale des mineurs.
+    </p>
+    <p>
+        Contribution moyenne : 38 000 ¥ / mois (variable selon dossier).
+    </p>
 </section>
 
 <section class="section">
     <h2>Vie quotidienne</h2>
 
     <div class="gallery">
-        <img src="images/enfant1.jpg">
-        <img src="images/enfant2.jpg">
-        <img src="images/enfant3.jpg">
+        <img src="images/enfant1.jpg" alt="Enfant résident 1">
+        <img src="images/enfant2.jpg" alt="Enfant résident 2">
+        <img src="images/enfant3.jpg" alt="Enfants au réfectoire">
     </div>
 </section>
 
+<section class="section admin-access">
+    <a href="connexion.html" class="admin-button">
+        Accès administratif
+    </a>
+</section>
+
 <footer>
-    © Orphelinat Hikari no Mori
+    © Orphelinat Hikari no Mori – Institution reconnue
 </footer>
 
 </body>
