--- a/connexion.html
+++ b/connexion.html
@@ -7,7 +7,7 @@
             var password = document.getElementById("password").value;
 
             if(password === "jumeaux2006") {
-                window.location.href = "archives.html";
+                window.location.href = "verification.html";
             } else {
                 alert("Mot de passe incorrect.");
             }
