--- a/verification.html
+++ b/verification.html
@@ -102,6 +102,8 @@
 <script>
 let clicksRequired = 5;
 let clicks = 0;
+let attempts = 0;
+const maxAttempts = 3;
 
 function createOrb() {
     let orb = document.createElement("div");
@@ -134,6 +136,10 @@ function startMemoryTest() {
 
     document.getElementById("memoryTest").style.display = "block";
 
+    generateCode();
+}
+
+function generateCode() {
     let code = Math.floor(100 + Math.random() * 900);
     window.generatedCode = code;
 
@@ -153,8 +159,16 @@ function checkCode() {
             window.location.href = "archives.html";
         }, 1000);
     } else {
-        alert("Empreinte instable. Rituel interrompu.");
-        location.reload();
+        attempts++;
+
+        if(attempts >= maxAttempts) {
+            alert("Instabilité critique détectée.\nAccès révoqué.");
+            window.location.href = "connexion.html";
+        } else {
+            alert("Empreinte instable.\nTentatives restantes : " + (maxAttempts - attempts));
+            generateCode();
+            document.getElementById("codeInput").value = "";
+        }
     }
 }
 </script>
