--- a/archives.html
+++ b/archives.html
@@ -14,6 +14,12 @@
 
 <ul>
 <li>
+<a href="experience-ratee.html" style="color:lightblue;">
+Dossier 09 – Expériences échouées
+</a>
+</li>
+
+<li>
 <a href="jumeaux.html" style="color:lightblue;">
 Dossier 12 – Expérience : Jumeaux
 </a>
