--- a/experience-ratee.html
+++ b/experience-ratee.html
@@ -7,6 +7,34 @@
         body {
             background-color: #0f172a;
             color: #e2e8f0;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .back-top {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+        }
+
+        .back-top a {
+            background: #1e293b;
+            color: #a78bfa;
+            padding: 8px 14px;
+            border-radius: 6px;
+            text-decoration: none;
+            font-size: 14px;
+            transition: 0.2s ease;
+        }
+
+        .back-top a:hover {
+            background: #2d3a54;
+        }
+
+        h1 {
+            text-align: center;
+            margin-top: 80px;
+            color: #c084fc;
         }
 
         .report {
@@ -19,7 +47,7 @@
         }
 
         .report img {
-            width: 250px;
+            width: 260px;
             border-radius: 10px;
             margin-top: 20px;
         }
@@ -32,53 +60,34 @@
         h2 {
             color: #a78bfa;
         }
-
-        .back {
-            text-align: center;
-            margin: 40px;
-        }
-
-        .back a {
-            color: #a78bfa;
-            text-decoration: none;
-        }
     </style>
 </head>
 <body>
 
-<h1 style="text-align:center; margin-top:40px;">
-Dossier 09 – Expériences Échouées
-</h1>
+<div class="back-top">
+    <a href="archives.html">⬅ Retour aux archives</a>
+</div>
+
+<h1>Dossier 09 – Expériences Échouées</h1>
 
 <div class="report">
     <h2>Rapport 09-A</h2>
-    <p><strong>Date :</strong> 14/03/2006 – 22:14</p>
-    <p><strong>Objectif :</strong> Augmentation du taux de synchronisation altérique entre sujets jumeaux.</p>
-    <p><strong>Observation :</strong> Désynchronisation brutale suivie d'une surcharge énergétique interne.</p>
-    <p class="status">Statut : Sujet S-02 – Décès confirmé (arrêt cardiaque instantané)</p>
-    <img src="images/enfant1.jpg">
+    <p><strong>Date :</strong> 14/03/2120</p>
+    <p><strong>Sujet :</strong> S-14 (mutation dermique écailleuse)</p>
+    <p><strong>Objectif :</strong> Évaluation de la solidité des écailles altériques face à une contrainte énergétique amplifiée.</p>
+    <p><strong>Observation :</strong> Les structures écailleuses ont montré une résistance supérieure aux prévisions initiales, mais une instabilité interne progressive a été détectée après surcharge.</p>
+    <p class="status">Statut : Sujet déclaré non viable après effondrement des constantes vitales.</p>
+    <img src="images/enfant4.jpg" alt="Sujet S-14">
 </div>
 
 <div class="report">
     <h2>Rapport 09-B</h2>
-    <p><strong>Date :</strong> 19/03/2006 – 01:37</p>
-    <p><strong>Objectif :</strong> Test de résistance cellulaire à une injection de catalyseur altérique.</p>
-    <p><strong>Observation :</strong> Mutation incontrôlée des tissus dermiques. Rupture des constantes vitales après 4 minutes.</p>
-    <p class="status">Statut : Sujet S-03 – Décès confirmé (instabilité biologique irréversible)</p>
-    <img src="images/enfant2.jpg">
-</div>
-
-<div class="report">
-    <h2>Rapport 09-C</h2>
-    <p><strong>Date :</strong> 22/03/2006 – 03:12</p>
-    <p><strong>Objectif :</strong> Tentative de stabilisation croisée post-mortem.</p>
-    <p><strong>Observation :</strong> Réactivation altérique partielle suivie d’un effondrement énergétique total.</p>
-    <p class="status">Statut : Échec expérimental – Aucun sujet viable.</p>
-    <img src="images/enfant3.jpg">
-</div>
-
-<div class="back">
-    <a href="archives.html">⬅ Retour aux archives</a>
+    <p><strong>Date :</strong> 19/03/2120</p>
+    <p><strong>Sujet :</strong> S-22 (mutation fibreuse animale)</p>
+    <p><strong>Objectif :</strong> Analyse de la résistance biologique et de la capacité de régénération des fibres altériques.</p>
+    <p><strong>Observation :</strong> Réaction imprévisible du tissu fibreux lors de l’injection catalytique. Perte rapide de stabilité cellulaire observée.</p>
+    <p class="status">Statut : Décès confirmé suite à défaillance systémique.</p>
+    <img src="images/enfant5.jpg" alt="Sujet S-22">
 </div>
 
 </body>
