--- a/archives.html
+++ b/archives.html
@@ -7,6 +7,10 @@
 
 <body class="database-body">
 
+<div class="database-back-home">
+    <a href="index.html">⬅ Retourner à l'accueil</a>
+</div>
+    
 <div class="database-header">
     <h1>Base de données interne</h1>
     <div class="database-sub">
