--- a/boitemail.html
+++ b/boitemail.html
@@ -20,10 +20,14 @@
 
 <h2>Fichier audio joint :</h2>
 
-<iframe width="560" height="315"
-src="https://www.youtube.com/embed/VIDEO_ID_AUDIO"
-frameborder="0" allowfullscreen>
-</iframe>
+<div class="audio-container">
+    <p>📎 Pièce jointe : rapport_audio_2120-03-19.mp3</p>
+    <audio controls>
+        <source src="audio/message01.mp3" type="audio/mpeg">
+        Votre navigateur ne supporte pas l'audio.
+    </audio>
+</div>
+
 
 <br><br>
 
