--- a/jumeaux.html
+++ b/jumeaux.html
@@ -1,32 +1,34 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Dossier 12 – Expérience Jumeaux</title>
-</head>
+<body class="internal-page">
 
-<body style="font-family: Arial; background-color:#111; color:white; padding:50px;">
+<div class="internal-back">
+    <a href="archives.html">⬅ Retour aux archives</a>
+</div>
 
-<h1>Dossier 12 – Expérience : Jumeaux</h1>
+<div class="internal-header">
+    <h1>Dossier 07 – Projet Jumeaux</h1>
+    <div class="classification">Classification : Confidentiel – Niveau 4</div>
+</div>
 
-<p>Classification : Confidentiel</p>
-<p>Date : 12/03/2006</p>
+<div class="internal-container">
 
-<p>Sujets : S-02 et S-03</p>
+    <div class="internal-card">
+        <h2>Objectif du programme</h2>
+        <p>
+            Étude de la synchronisation altérique croisée entre deux sujets
+            partageant un lien génétique avancé. Analyse des réactions
+            énergétiques lors d’une activation simultanée.
+        </p>
+    </div>
 
-<p>Rapport interne : Synchronisation comportementale anormale observée.</p>
+    <div class="internal-card">
+        <h2>Observations principales</h2>
+        <p>
+            Les données démontrent une amplification significative des flux
+            altériques lorsque les sujets sont en proximité immédiate.
+            Instabilité détectée lors de séparation prolongée.
+        </p>
+    </div>
 
-<hr>
-
-<h2>Enregistrement vidéo :</h2>
-
-<iframe width="560" height="315"
-src="https://www.youtube.com/embed/VIDEO_ID"
-frameborder="0" allowfullscreen>
-</iframe>
-
-<br><br>
-
-<a href="archives.html" style="color:lightblue;">⬅ Retour aux archives</a>
+</div>
 
 </body>
-</html>
