--- a/boitemail.html
+++ b/boitemail.html
@@ -1,37 +1,32 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Messagerie Interne</title>
-</head>
+<body class="internal-page">
 
-<body style="font-family: Arial; background-color:#1a1a1a; color:white; padding:50px;">
-
-<h1>Messagerie Interne</h1>
-
-<p>Boîte de réception :</p>
-
-<hr>
-
-<h3>Nouveau message – 14/03/2006</h3>
-<p>Expéditeur : Direction Centrale</p>
-<p>Objet : Rapport complémentaire – Sujet S-02</p>
-
-<hr>
-
-<h2>Fichier audio joint :</h2>
-
-<div class="audio-container">
-    <p>📎 Pièce jointe : rapport_audio_2120-03-19.mp3</p>
-    <audio controls>
-        <source src="audio/message01.mp3" type="audio/mpeg">
-        Votre navigateur ne supporte pas l'audio.
-    </audio>
+<div class="internal-back">
+    <a href="archives.html">⬅ Retour aux archives</a>
 </div>
 
+<div class="internal-header">
+    <h1>Messagerie interne</h1>
+    <div class="classification">Accès interne validé</div>
+</div>
 
-<br><br>
+<div class="internal-container">
 
-<a href="archives.html" style="color:lightblue;">⬅ Retour aux archives</a>
+    <div class="internal-card">
+        <h2>Message 2120-03-19</h2>
+        <p>
+            Sujet instable. Transfert vers unité isolée recommandé.
+            Rapport audio joint ci-dessous.
+        </p>
+
+        <div class="audio-container">
+            <p>📎 rapport_audio_2120-03-19.mp3</p>
+            <audio controls>
+                <source src="audio/message01.mp3" type="audio/mpeg">
+                Votre navigateur ne supporte pas l'audio.
+            </audio>
+        </div>
+    </div>
+
+</div>
 
 </body>
-</html>
