--- a/jumeaux.html
+++ b/jumeaux.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Dossier 07 – Projet Jumeaux</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
 <body class="internal-page">
 
 <div class="internal-back">
@@ -15,8 +22,7 @@
         <h2>Objectif du programme</h2>
         <p>
             Étude de la synchronisation altérique croisée entre deux sujets
-            partageant un lien génétique avancé. Analyse des réactions
-            énergétiques lors d’une activation simultanée.
+            partageant un lien génétique avancé.
         </p>
     </div>
 
@@ -32,3 +38,4 @@
 </div>
 
 </body>
+</html>
