--- a/boitemail.html
+++ b/boitemail.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Messagerie interne</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
 <body class="internal-page">
 
 <div class="internal-back">
@@ -6,15 +13,25 @@
 
 <div class="internal-header">
     <h1>Messagerie interne</h1>
-    <div class="classification">Accès interne validé</div>
+    <div class="classification">Accès interne validé – Niveau 4</div>
 </div>
 
 <div class="internal-container">
 
     <div class="internal-card">
         <h2>Message 2120-03-19</h2>
+        <p><strong>Expéditeur :</strong> Direction – Unité Expérimentale</p>
+        <p><strong>Destinataire :</strong> Personnel Niveau 4</p>
+        <p><strong>Objet :</strong> Sujet instable – transfert requis</p>
+
         <p>
-            Sujet instable. Transfert vers unité isolée recommandé.
+            Le sujet présente des variations altériques non contrôlées.
+            Une instabilité énergétique persistante a été détectée
+            après la dernière phase de test.
+        </p>
+
+        <p>
+            Transfert vers unité isolée recommandé.
             Rapport audio joint ci-dessous.
         </p>
 
@@ -27,6 +44,22 @@
         </div>
     </div>
 
+    <div class="internal-card">
+        <h2>Message 2120-03-21</h2>
+        <p><strong>Expéditeur :</strong> Département Recherche</p>
+        <p><strong>Objet :</strong> Incident mineur – laboratoire B</p>
+
+        <p>
+            Une surcharge temporaire a été enregistrée dans le laboratoire B.
+            Aucun personnel blessé. Données récupérées partiellement.
+        </p>
+
+        <p>
+            Une enquête interne est en cours.
+        </p>
+    </div>
+
 </div>
 
 </body>
+</html>
