--- a/jumeaux.html
+++ b/jumeaux.html
@@ -13,25 +13,107 @@
 
 <div class="internal-header">
     <h1>Dossier 07 – Projet Jumeaux</h1>
-    <div class="classification">Classification : Confidentiel – Niveau 4</div>
+    <div class="classification">Classification : Confidentiel – Niveau 5</div>
 </div>
 
 <div class="internal-container">
 
     <div class="internal-card">
-        <h2>Objectif du programme</h2>
+        <h2>Programme d’étude – Résonance gémellaire</h2>
         <p>
-            Étude de la synchronisation altérique croisée entre deux sujets
-            partageant un lien génétique avancé.
+            Les sujets 07-A et 07-B ont été identifiés dès leur plus jeune âge
+            comme présentant une anomalie énergétique rare.
+        </p>
+
+        <p>
+            Leur proximité génétique et comportementale a révélé une
+            synchronisation altérique spontanée, dépassant les projections
+            théoriques des unités de recherche.
+        </p>
+
+        <p>
+            Le projet visait à analyser, isoler et reproduire cette résonance
+            dans un cadre contrôlé.
         </p>
     </div>
 
     <div class="internal-card">
-        <h2>Observations principales</h2>
+        <h2>Évaluation psychologique</h2>
         <p>
-            Les données démontrent une amplification significative des flux
-            altériques lorsque les sujets sont en proximité immédiate.
-            Instabilité détectée lors de séparation prolongée.
+            Sujet 07-A : profil calme, introverti, haut potentiel
+            d’obéissance conditionnelle.
+        </p>
+
+        <p>
+            Sujet 07-B : profil émotionnellement stable en présence
+            du sujet 07-A. Forte dépendance mutuelle observée.
+        </p>
+
+        <p>
+            Le lien fusionnel représente un facteur d’amplification…
+            mais également une variable incontrôlable.
+        </p>
+    </div>
+
+    <div class="internal-card">
+        <h2>Rapport expérimental – 14/03/2120</h2>
+
+        <p><strong>Objectif :</strong> Tester la réaction du sujet 07-A
+        face à une situation de stress critique impliquant 07-B.</p>
+
+        <p>
+            Résultat : activation incontrôlée.
+            Désintégration partielle de l’infrastructure.
+        </p>
+
+        <p>
+            Plusieurs membres ont été neutralisés.
+            L’ampleur du phénomène dépasse les simulations.
+        </p>
+
+        <p>
+            Recommandation : isolement strict ou élimination préventive.
+        </p>
+
+        <h3>Enregistrement vidéo :</h3>
+
+        <iframe width="560" height="315"
+        src="https://www.youtube.com/embed/VIDEO_ID"
+        frameborder="0" allowfullscreen>
+        </iframe>
+
+    </div>
+
+    <div class="internal-card">
+        <h2>Rapport d’incident – Évasion des sujets</h2>
+
+        <p><strong>Date :</strong> 19/03/2120</p>
+
+        <p>
+            Suite à l’incident précédent, les sujets 07-A et 07-B
+            ont pris la fuite durant une panne partielle des systèmes.
+        </p>
+
+        <p>
+            Plusieurs agents ont été retrouvés neutralisés.
+            Un membre de sécurité a été découvert sans signe vital
+            à proximité de la zone métallique.
+        </p>
+
+        <p>
+            Les enregistrements montrent une silhouette observant
+            la scène depuis le toit de l’établissement.
+        </p>
+
+        <img src="images/garde_mort.jpg" style="width:100%; border-radius:10px; margin-top:20px;">
+
+        <p style="margin-top:20px;">
+            Statut actuel : 
+            <strong>Fuite confirmée.</strong>
+        </p>
+
+        <p>
+            Priorité absolue : récupération des sujets.
         </p>
     </div>
 
