--- a/jumeaux.html
+++ b/jumeaux.html
@@ -105,7 +105,7 @@
             la scène depuis le toit de l’établissement.
         </p>
 
-        <img src="images/garde_mort.jpg" style="width:100%; border-radius:10px; margin-top:20px;">
+        <img src="images/garde_mort.jpg" class="incident-image">
 
         <p style="margin-top:20px;">
             Statut actuel : 
