--- a/jumeaux.html
+++ b/jumeaux.html
@@ -105,7 +105,13 @@
             la scène depuis le toit de l’établissement.
         </p>
 
+        <p class="incident-caption">
+            Image d’un agent de sécurité retrouvé sans signe vital
+            suite à l’évasion des sujets 07-A et 07-B.
+        </p>
+
         <img src="images/garde_mort.jpg" class="incident-image">
+
 
         <p style="margin-top:20px;">
             Statut actuel : 
