--- a/jumeaux.html
+++ b/jumeaux.html
@@ -110,7 +110,28 @@
             suite à l’évasion des sujets 07-A et 07-B.
         </p>
 
-        <img src="images/garde_mort.jpg" class="incident-image">
+        <div class="incident-block">
+
+    <img src="images/garde_mort.jpg" class="incident-image">
+
+    <div class="incident-text">
+        <p>
+            Image d’un agent de sécurité retrouvé sans signe vital
+            suite à l’évasion des sujets 07-A et 07-B.
+        </p>
+
+        <p>
+            Impact crânien confirmé. Traces d’altération
+            moléculaire détectées sur le membre supérieur droit.
+        </p>
+
+        <p>
+            Cause officielle : activation non contrôlée.
+        </p>
+    </div>
+
+</div>
+
 
 
         <p style="margin-top:20px;">
